fix overflow

--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 .container{
     display: flex;
-    max-height: 92vh;
+    max-height: 91vh;
     overflow: auto;
 }
 
@@ -94,7 +94,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 5px;
+    padding: 7px;
     z-index: 5;
     border: 1px solid rgba(0, 0, 0, .125);
     background-color: rgba(0, 0, 0, .125);
